syntax = "proto3";

package iam.mfa.grpc.api.data;

option java_multiple_files = true;
option java_package = "iam.mfa.grpc.api.data";

message GrpcPersonResponse{
  string id = 1;
  string name = 2;
  int32 age = 3;
  string  email = 4;
  string lifeIntro = 5;
  string serverName = 6;
}
message GrpcPersonRequest{
  string name = 1;
  int32 age = 2;
  string  email = 3;
  string lifeIntro = 4;
}
message GrpcRetrieveRequest{
  string name = 1;
  string email = 2;
}



service PersonService{
  rpc savePerson(GrpcPersonRequest) returns (GrpcPersonResponse);
  rpc updatePerson(GrpcPersonRequest)  returns (GrpcPersonResponse);
  rpc retrievePerson(GrpcRetrieveRequest) returns (GrpcPersonResponse);
}

